--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../assets/LOGO-LF.png" alt="" width="150">
+        <img src="./assets/LOGO-LF.png" alt="" width="150">
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,16 +25,16 @@
             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Secciones/portfolio.html"> Portfolio </a>
+            <a class="nav-link" href="./secciones/portfolio.html"> Portfolio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Secciones/clases.html"> Clases </a>
+            <a class="nav-link" href="./secciones/clases.html"> Clases </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Secciones/proyectos.html"> Proyectos </a>
+            <a class="nav-link" href="./secciones/proyectos.html"> Proyectos </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Secciones/nosotros.html"> Nosotros </a>
+            <a class="nav-link" href="./secciones/nosotros.html"> Nosotros </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Secciones/contacto.html"> Contacto </a>
