--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="./secciones/nosotros.html"> Nosotros </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Secciones/contacto.html"> Contacto </a>
+            <a class="nav-link" href="./secciones/contacto.html"> Contacto </a>
           </li>
       </div>
 </nav><!-- FIN DE NAVBAR-->
@@ -63,7 +63,7 @@
       <div class="carousel-item">
         <img src="./assets/Hero-BG-2022.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="display-1 fw-bold">Atomósferas</h1>
+          <h1 class="display-1 fw-bold">Atmósferas</h1>
           <p class="lead2 fw-light">En mis fotografías encontrarás un estilo fotográfico con luz cuidada y natural.</p>
         </div>
       </div>
@@ -121,7 +121,7 @@
           <div class="profile-card-2"><img src="./assets/Portfolio-RAM-deg.jpg" class="img img-responsive">
             <div class="profile-name">CHRYSLER
               <br>RAM</div>
-          <a class="btn btn-success" href="./Secciones/Portfolio.html" role="button">Saber + </a>
+          <a class="btn btn-success" href="./secciones/Portfolio.html" role="button">Saber + </a>
           <div class="profile-overview">
               <div class="profile-overview">
               </div>
@@ -139,7 +139,7 @@
             <h2 class="lead2 display-3 fw-bold">Cursos de fotografía</h2>
             <p class="lead2 text-center">¡Conoce algunos de los cursos que tengo para vos!</p>
         </div>
-        <a class="btn btn-outline-light btn-rounded" href="./Secciones/Portfolio.html" role="button">Saber + </a>
+        <a class="btn btn-outline-light btn-rounded" href="./secciones/Portfolio.html" role="button">Saber + </a>
       </div>
     </div> 
 <!-- FIN CLASES-->
@@ -168,7 +168,7 @@
           </div>
         </div>
         <div class="lc-block text-end">
-           <a class="btn btn-outline-light btn-rounded" href="../Secciones/proyectos.html" role="button">Saber +</a>
+           <a class="btn btn-outline-light btn-rounded" href="../secciones/proyectos.html" role="button">Saber +</a>
         </div>
 
         <!-- /lc-block -->
@@ -205,7 +205,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="http://https://www.facebook.com/LucasFerreyraOK" class="h3 text-dark text-decoration-none">Facebook</a></p>
+                <p><a href="https://www.facebook.com/LucasFerreyraOK" target=blanck class="h3 text-dark text-decoration-none">Facebook</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
@@ -224,7 +224,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="https://www.linkedin.com/in/lucasferreyra" class="h3 text-dark text-decoration-none">Linkedin</a></p>
+                <p><a href="https://www.linkedin.com/in/lucasferreyra" target=blanck class="h3 text-dark text-decoration-none">Linkedin</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
@@ -243,7 +243,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="https://twitter.com/lferreyra?lang=es" class="h3 text-dark text-decoration-none">Twitter</a></p>
+                <p><a href="https://twitter.com/lferreyra?lang=es" target=blanck class="h3 text-dark text-decoration-none">Twitter</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
